[gd_scene load_steps=4 format=3 uid="uid://ba72wom6vkfc"]

[ext_resource type="Script" path="res://UI/Inventory/Inventory.gd" id="1_3igeh"]
[ext_resource type="Script" path="res://UI/Inventory/InventorySlot.gd" id="2_htnma"]
[ext_resource type="Script" path="res://UI/Inventory/InventoryItem.gd" id="3_rjdwr"]

[node name="Node2D" type="Node2D"]

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource("1_3igeh")

[node name="Panel" type="Panel" parent="GUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inv" type="GridContainer" parent="GUI"]
unique_name_in_owner = true
offset_left = 512.0
offset_top = 128.0
offset_right = 1088.0
offset_bottom = 576.0
mouse_filter = 0
columns = 4

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
offset_left = 192.0
offset_top = 192.0
offset_right = 460.0
offset_bottom = 256.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/VBoxContainer"]
layout_mode = 2

[node name="WeaponSlot1" type="PanelContainer" parent="GUI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2_htnma")
type = 4

[node name="Weapon1" type="TextureRect" parent="GUI/VBoxContainer/HBoxContainer/WeaponSlot1"]
layout_mode = 2
script = ExtResource("3_rjdwr")

[node name="WeaponSlot2" type="PanelContainer" parent="GUI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2_htnma")
type = 4

[node name="Weapon2" type="TextureRect" parent="GUI/VBoxContainer/HBoxContainer/WeaponSlot2"]
layout_mode = 2
script = ExtResource("3_rjdwr")

[node name="WeaponSlot3" type="PanelContainer" parent="GUI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2_htnma")
type = 4

[node name="Weapon3" type="TextureRect" parent="GUI/VBoxContainer/HBoxContainer/WeaponSlot3"]
layout_mode = 2
script = ExtResource("3_rjdwr")

[node name="WeaponSlot4" type="PanelContainer" parent="GUI/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2_htnma")
type = 4

[node name="Weapon4" type="TextureRect" parent="GUI/VBoxContainer/HBoxContainer/WeaponSlot4"]
layout_mode = 2
script = ExtResource("3_rjdwr")

[connection signal="ChangeWeaponSlot" from="GUI/VBoxContainer/HBoxContainer/WeaponSlot1" to="GUI" method="_on_weapon_slot_1_change_weapon_slot"]
[connection signal="ChangeWeaponSlot" from="GUI/VBoxContainer/HBoxContainer/WeaponSlot2" to="GUI" method="_on_weapon_slot_2_change_weapon_slot"]
[connection signal="ChangeWeaponSlot" from="GUI/VBoxContainer/HBoxContainer/WeaponSlot3" to="GUI" method="_on_weapon_slot_3_change_weapon_slot"]
[connection signal="ChangeWeaponSlot" from="GUI/VBoxContainer/HBoxContainer/WeaponSlot4" to="GUI" method="_on_weapon_slot_4_change_weapon_slot"]
